<resources>
    <string name="app_name">中大儿</string>
    <string name="account">我的</string>
    <string name="service">服务</string>
    <string name="activity">活动</string>
    <string name="course">课程</string>
    <string name="location">位置</string>
    <string name="time">时间</string>
    <string name="exam">考试</string>
    <string name="todo">待办</string>
    <string name="classroom_query">自习室/研讨室查询</string>
    <string name="office">教学楼</string>
    <string name="date">日期</string>
    <string name="query">查询</string>
    <string name="classroom_type">教室类型</string>
    <string name="course_schedule">课程表</string>
    <string name="evaluation">评教</string>
    <string name="teacher">教师</string>
    <string name="select_all">反选</string>
    <string name="self_study_room">自习室</string>
    <string name="term">学期</string>
    <string name="week1">第1周</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="captcha">验证码</string>
    <string name="today">今天</string>
    <string name="no_class_today">今天没课🎉</string>
    <string name="no_exam">没有考试🎉</string>
    <string name="classTime">节次</string>
    <string name="name">名称</string>
    <string name="college">学院</string>
    <string name="grade">年级</string>
    <string name="profession">专业</string>
    <string name="type">类型</string>
    <string name="reset">重置</string>
    <string name="news">资讯</string>
    <string name="official_account">公众号</string>
    <string name="notification">通知</string>
    <string name="daily_news">今日中大</string>
    <string name="campus">校区</string>
    <string name="field">场地</string>
    <string name="exam_name">考试科目</string>
    <string name="exam_location">考试地点</string>
    <string name="exam_time">考试时间</string>
    <string name="exam_duration">考试时长</string>
    <string name="exam_class">考试课时</string>
    <string name="exam_mode">考核方式</string>
    <string name="exam_stage">考试阶段</string>
    <string name="exam_date">考试日期</string>
    <string name="open">打开</string>
    <string name="score">成绩</string>
    <string name="subject">科目</string>
    <string name="year">学年</string>
    <string name="train_type">培养类型</string>
    <string name="calendar">校历</string>
    <string name="week18">18周</string>
    <string name="week19">19周</string>
    <string name="last">最近</string>
    <string name="setting">设置</string>
    <string name="privacy">个人信息</string>
    <string name="official_website">官网</string>
    <string name="light">明亮</string>
    <string name="dark">黑暗</string>
    <string name="follow_system">跟随系统</string>
    <string name="about">关于</string>
    <string name="help">帮助</string>
    <string name="app">软件</string>
    <string name="theme">主题</string>
    <string name="language">语言</string>
    <string name="home">首页</string>
    <string name="appearance">外观</string>
    <string name="open_source">开源</string>
    <string name="week_d">第%d周</string>
    <string name="week_s">第%s周</string>
    <string name="no_net_connected">请检查网络！</string>
    <string name="login_warning">请登录！</string>
    <string name="term_x">第%s学期</string>
    <string name="minute">分钟</string>
    <string name="section_range">第%d~%d节</string>
    <string name="course_selection">选课</string>
    <string name="seminar_room">研讨室</string>
    <string name="default_class">第1节到第11节</string>
    <string name="section_range_x">第%s节到第%s节</string>
    <string name="my_major">本专业</string>
    <string name="public_selection">校级公选</string>
    <string name="transdisciplinary">跨专业</string>
    <string name="category">类别</string>
    <string name="major_compulsory">专必</string>
    <string name="major_selective">专选</string>
    <string name="pe">体育</string>
    <string name="en">大英</string>
    <string name="public_compulsory">公必</string>
    <string name="honor">荣誉课程</string>
    <string name="filter">筛选</string>
    <string name="filter_by_vacancy">按剩余空位排序</string>
    <string name="hide_vacancy">隐藏无空位</string>
    <string name="hide_selected">隐藏已选</string>
    <string name="like">收藏</string>
    <string name="select_course">选课</string>
    <string name="school_public_selective">院内公选</string>
    <string name="course_detail">课程详情</string>
    <string name="course_draft">课程大纲</string>
    <string name="course_intro">课程内容简介</string>
    <string name="course_goal">课程目标</string>
    <string name="course_resource">课程资源</string>
    <string name="course_method">教学方法</string>
    <string name="course_score">成绩评定方式</string>
    <string name="course_reference">主要参考书目</string>
    <string name="add_filter">高级筛选</string>
    <string name="course_query">课程查询</string>
    <string name="week">星期</string>
    <string name="section">节次</string>
    <string name="special">特色课程</string>
    <string name="school">学院</string>
    <string name="confirm">确定</string>
    <string name="only_collection">只显示收藏</string>
    <string name="school_enroll">学籍</string>
    <string name="cet">四六级</string>
    <string name="register_info">注册信息查看</string>
    <string name="major_info">本科专业查询</string>
    <string name="school_work_warning">学业预警</string>
    <string name="course_completion">课程进度</string>
    <string name="pay_fee">缴费</string>
    <string name="between">~</string>
    <string name="school_bus">校车</string>
    <string name="project">项目</string>
    <string name="version">版本</string>
    <string name="qq_group">QQ群</string>
    <string name="feedback">反馈</string>
    <string name="check_update">检测更新</string>
    <string name="permission">权限</string>
    <string name="scan">扫码</string>
    <string name="qrcode">逸仙码</string>
    <string name="icon_theme">图标</string>
    <string name="password_login">密码登录</string>
    <string name="web_login">网页登录</string>
    <string name="font_size">字体大小</string>
    <string name="student_job">勤工俭学</string>
    <string name="close">关闭</string>
    <string name="search">搜索</string>
    <string name="exam_week">考试周</string>
    <string name="current_version">当前版本</string>
    <string name="download_link">下载地址</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="user_agreement">用户协议</string>
    <string name="submit_issues">提交议题</string>
    <string name="sponsor">捐赠</string>
    <string name="academic_affair_notice">教务通知</string>
    <string name="day">日</string>
    <string name="from_to">第%s节到第%s节</string>
    <string name="done">已完成</string>
    <string name="school_affair_notice">院系通知</string>
    <string name="add_todo">添加待办</string>
    <string name="title">标题</string>
    <string name="description">描述</string>
    <string name="cancel">取消</string>
    <string name="other">其他</string>
    <string name="ddl">截止日期</string>
    <string name="remind">提醒</string>
    <string name="priority">优先级</string>
    <string name="delete">删除</string>
    <string name="add">添加</string>
    <string name="tomorrow">明天</string>
    <string name="last_week">上一周</string>
    <string name="week_x">星期%s</string>
    <string name="add_time_segment">添加时间段</string>
    <string name="up">上移</string>
    <string name="down">下移</string>
    <string name="next_week">下周</string>
    <string name="select">选择</string>
    <string name="fifteen_mins">15分钟</string>
    <string name="half_hour">30分钟</string>
    <string name="one_hour">1小时</string>
    <string name="custom">自定义</string>
    <string name="none">无</string>
    <string name="on_time">准时</string>
    <string name="one_day">1天</string>
    <string name="five_mins">5分钟</string>
    <string name="custom_remind_title">提前时间（分钟）</string>
    <string name="tag">标签</string>
    <string name="save">保存</string>
    <string name="submit">提交</string>
    <string name="please_enter_content">请输入内容</string>
    <string name="save_successful">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="submit_successful">提交成功</string>
    <string name="submit_fail">提交失败</string>
    <string name="fill">填充</string>
    <string name="assistant">助教</string>
    <string name="dashboard">面板</string>
    <string name="next_class">下一节课</string>
    <string name="shortcut">快捷方式</string>
    <string name="copy_successfully">成功复制</string>
    <string name="course_selected">已选课程</string>
    <string name="last_week_warning">这是最后一周</string>
    <string name="result">结果</string>
    <string name="share">分享</string>
    <string name="menu">菜单</string>
    <string name="credit">学分</string>
    <string name="total_year">总学年</string>
    <string name="total_rank">总排名</string>
    <string name="total_credit">总学分</string>
    <string name="total_point">总绩点</string>
    <string name="current_rank">当前排名</string>
    <string name="current_point">当前绩点</string>
    <string name="term_credit">学期学分</string>
    <string name="public_compulsory_credit">公必学分</string>
    <string name="public_select_credit">公选学分</string>
    <string name="major_compulsory_credit">专必学分</string>
    <string name="major_select_credit">专选学分</string>
    <string name="honor_credit">荣誉学分</string>
    <string name="no_app">没有安装APP</string>
    <string name="school_enrollment_basic_info">基本信息</string>
    <string name="school_enrollment_family_info">家庭成员及社会关系</string>
    <string name="school_enrollment_education_info">学历及经历</string>
    <string name="school_enrollment_exchange_info">交流经历</string>
    <string name="school_enrollment_change_info">异动情况</string>
    <string name="school_enrollment_major_info">双专业双学位辅修</string>
    <string name="school_enrollment_register_info">注册状态</string>
    <string name="school_enrollment_punish_info">惩处</string>
    <string name="school_enrollment_personal_info">个人基本信息</string>
    <string name="school_enrollment_roll_info">学籍信息</string>
    <string name="school_enrollment_contact_info">联系方式</string>
    <string name="school_enrollment_student_number">学号</string>
    <string name="js">JS脚本</string>
    <string name="status">状态</string>
    <string name="classroom">教室</string>
    <string name="course_name">课程名称</string>
    <string name="year_term">学年学期</string>
    <string name="department">开课单位</string>
    <string name="query_type">查询类别</string>
    <string name="class_begin">开始节次</string>
    <string name="class_end">结束节次</string>
    <string name="week_begin">开始周次</string>
    <string name="week_end">结束周次</string>
    <string name="week_time">单双周</string>
    <string name="occupy_source">占用来源</string>
    <string name="occupy_reason">占用原因</string>
    <string name="recruitment_info">招聘信息</string>
    <string name="cv">简历</string>
    <string name="application_record">申请记录</string>
    <string name="mobile_mode">移动模式</string>
    <string name="image_blocked">无图模式</string>
    <string name="javascript">JS</string>
    <string name="save_mobile_data_mode">省流模式</string>
    <string name="browser">浏览器</string>
    <string name="edit">编辑</string>
    <string name="disable">禁用</string>
    <string name="enable">启用</string>
    <string name="matches">匹配</string>
    <string name="run">运行</string>
    <string name="privacy_mode">无痕模式</string>
    <string name="author">作者</string>
    <string name="auto_update_when_launched">应用启动时自动检测更新</string>
    <string name="electricity_fee">电费</string>
    <string name="water_fee">水费</string>
    <string name="update">更新</string>
    <string name="developer_mode">开发者模式</string>
    <string name="exclude">排除</string>
    <string name="action">操作</string>
    <string name="info">信息</string>
    <string name="script_link">脚本链接</string>
    <string name="update_link">更新链接</string>
    <string name="homepage">主页</string>
    <string name="namespace">命名空间</string>
    <string name="support_link">支持</string>
    <string name="course_date">课程时间</string>
    <string name="dynamic_color">动态取色</string>
    <string name="dynamic_color_summary">根据壁纸取色（Android12+）</string>
    <string name="floating_liquid_glass_navigation_bar_summary">底部浮动模糊材质导航栏（Android12+）</string>
    <string name="material_navigation_bar_summary">底部质感材质导航栏</string>
    <string name="navigation_bar">导航栏</string>
</resources>