<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/appearance">
        <com.miyuyan.sysuer.preference.MenuPreference
            app:defaultValue="2"
            app:entries="@array/theme"
            app:entryValues="@array/values_3"
            app:icon="@drawable/light"
            app:key="theme"
            app:title="@string/theme" />
        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/palette"
            app:key="dynamic_color"
            app:summary="@string/dynamic_color_summary"
            app:title="@string/dynamic_color" />
        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/navigation_bar"
            app:key="navigation_bar"
            app:summaryOff="@string/material_navigation_bar_summary"
            app:summaryOn="@string/floating_liquid_glass_navigation_bar_summary"
            app:title="@string/navigation_bar" />
        <com.miyuyan.sysuer.preference.MenuPreference
            app:defaultValue="2"
            app:entries="@array/theme"
            app:entryValues="@array/values_3"
            app:icon="@drawable/color"
            app:key="icon_theme"
            app:title="@string/icon_theme" />
        <com.miyuyan.sysuer.preference.MenuPreference
            app:defaultValue="2"
            app:entries="@array/language"
            app:entryValues="@array/values_3"
            app:icon="@drawable/language"
            app:key="language"
            app:title="@string/language" />
        <com.miyuyan.sysuer.preference.MenuPreference
            app:defaultValue="0"
            app:entries="@array/font_size"
            app:entryValues="@array/values_6"
            app:icon="@drawable/font"
            app:key="fontSize"
            app:summary="@string/follow_system"
            app:title="@string/font_size" />
        <com.miyuyan.sysuer.preference.MenuPreference
            app:defaultValue="0"
            app:entries="@array/home"
            app:entryValues="@array/values_3"
            app:icon="@drawable/home"
            app:key="home"
            app:title="@string/home" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/dashboard">
        <com.miyuyan.sysuer.preference.EditPreference
            app:icon="@drawable/qrcode"
            app:key="qrcode"
            app:title="@string/qrcode" />
        <com.miyuyan.sysuer.preference.MutiListPreference
            app:defaultValue="@array/values_6"
            app:entries="@array/dashboard"
            app:entryValues="@array/values_6"
            app:icon="@drawable/window"
            app:key="dashboard"
            app:positiveButtonText="@string/confirm"
            app:summary="@string/custom"
            app:title="@string/dashboard" />
        <rikka.preference.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/course_date"
            app:entryValues="@array/values_2"
            app:icon="@drawable/calendar"
            app:key="course_date"
            app:summary="@string/today"
            app:title="@string/course_date"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <!--<PreferenceCategory app:title="@string/login">
        <com.sysu.edu.preference.MenuPreference
            app:defaultValue="2"
            app:entries="@array/login_mode"
            app:entryValues="@array/values_4"
            app:icon="@drawable/account"
            app:key="loginMode"
            app:title="@string/login" />
    </PreferenceCategory>-->

    <PreferenceCategory app:title="@string/browser">
        <Preference
            app:icon="@drawable/js"
            app:persistent="false"
            app:title="@string/javascript">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.miyuyan.sysuer.browser.JSActivity"
                android:targetPackage="com.miyuyan.sysuer" />
        </Preference>
        <rikka.material.preference.MaterialSwitchPreference
            app:icon="@drawable/image_block"
            app:key="image_blocked"
            app:title="@string/image_blocked" />
        <rikka.material.preference.MaterialSwitchPreference
            app:icon="@drawable/refresh"
            app:key="js_enabled"
            app:title="@string/js" />
        <rikka.material.preference.MaterialSwitchPreference
            app:icon="@drawable/wifi"
            app:key="save_mobile_data_mode"
            app:title="@string/save_mobile_data_mode" />
        <rikka.material.preference.MaterialSwitchPreference
            app:icon="@drawable/privacy"
            app:key="privacy_mode"
            app:title="@string/privacy_mode" />
        <rikka.material.preference.MaterialSwitchPreference
            app:icon="@drawable/phone"
            app:key="mobile_mode"
            app:title="@string/mobile_mode" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/app">
        <rikka.material.preference.MaterialSwitchPreference
            android:summary="@string/auto_update_when_launched"
            app:defaultValue="true"
            app:icon="@drawable/refresh"
            app:key="update"
            app:title="@string/check_update" />
        <Preference
            app:icon="@drawable/developer"
            app:isPreferenceVisible="false"
            app:key="developer_mode"
            app:persistent="false"
            app:title="@string/developer_mode">
            <intent
                android:targetClass="com.miyuyan.sysuer.extra.DeveloperActivity"
                android:targetPackage="com.miyuyan.sysuer" />
        </Preference>
        <Preference
            app:icon="@drawable/info"
            app:title="@string/about">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.miyuyan.sysuer.extra.AboutActivity"
                android:targetPackage="com.miyuyan.sysuer" />
        </Preference>
        <Preference
            app:icon="@drawable/refresh"
            app:title="@string/update">
            <intent
                android:targetClass="com.miyuyan.sysuer.extra.UpdateActivity"
                android:targetPackage="com.miyuyan.sysuer" />
        </Preference>
        <Preference
            app:icon="@drawable/help"
            app:title="@string/help">
            <intent
                android:data="https://sysu-tang.github.io/sysuer-website/docs/user/introduction"
                android:targetClass="com.miyuyan.sysuer.browser.BrowserActivity"
                android:targetPackage="com.miyuyan.sysuer" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>