<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/classroom">
        <rikka.preference.SimpleMenuPreference
            app:icon="@drawable/location"
            app:key="campus"
            app:persistent="false"
            app:title="@string/campus"
            app:useSimpleSummaryProvider="true" />
        <rikka.preference.SimpleMenuPreference
            app:icon="@drawable/location"
            app:key="teachingBuilding"
            app:persistent="false"
            app:title="@string/office"
            app:useSimpleSummaryProvider="true" />
        <com.miyuyan.sysuer.preference.FilterPreference
            app:allowDividerAbove="false"
            app:canEdit="true"
            app:icon="@drawable/location"
            app:isFilter="false"
            app:key="classroom"
            app:persistent="false"
            app:title="@string/classroom"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/query">
        <rikka.preference.SimpleMenuPreference
            app:entries="@array/check_types"
            app:entryValues="@array/check_type_values"
            app:icon="@drawable/info"
            app:key="queryType"
            app:persistent="false"
            app:title="@string/query_type"
            app:useSimpleSummaryProvider="true" />
        <rikka.preference.SimpleMenuPreference
            app:entries="@array/occupy_sources"
            app:entryValues="@array/occupy_source_values"
            app:icon="@drawable/info"
            app:key="occupySource"
            app:persistent="false"
            app:title="@string/occupy_source"
            app:useSimpleSummaryProvider="true" />
        <com.miyuyan.sysuer.preference.EditPreference
            app:icon="@drawable/edit"
            app:key="occupyReason"
            app:persistent="false"
            app:title="@string/occupy_reason"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/time">
        <com.miyuyan.sysuer.preference.SliderPreference
            android:max="16"
            app:icon="@drawable/calendar"
            app:key="classBegin"
            app:min="0"
            app:persistent="false"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:title="@string/class_begin"
            app:useSimpleSummaryProvider="true" />
        <com.miyuyan.sysuer.preference.SliderPreference
            android:max="16"
            app:icon="@drawable/calendar"
            app:key="classEnd"
            app:min="0"
            app:persistent="false"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:title="@string/class_end"
            app:useSimpleSummaryProvider="true" />
        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/help"
            app:key="isWeek"
            app:persistent="false"
            app:summaryOff="@string/date"
            app:summaryOn="@string/week"
            app:title="@string/select"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        app:key="weekSelection"
        app:title="@string/week">
        <rikka.preference.SimpleMenuPreference
            app:icon="@drawable/course"
            app:key="yearSemester"
            app:persistent="false"
            app:title="@string/year_term"
            app:useSimpleSummaryProvider="true" />
        <com.miyuyan.sysuer.preference.SliderPreference
            android:max="25"
            app:icon="@drawable/course"
            app:key="weekBegin"
            app:min="0"
            app:persistent="false"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:title="@string/week_begin"
            app:useSimpleSummaryProvider="true" />
        <com.miyuyan.sysuer.preference.SliderPreference
            android:max="25"
            app:icon="@drawable/course"
            app:key="weekEnd"
            app:min="0"
            app:persistent="false"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:title="@string/week_end"
            app:useSimpleSummaryProvider="true" />
        <rikka.preference.SimpleMenuPreference
            app:entries="@array/week_times"
            app:entryValues="@array/week_time_values"
            app:icon="@drawable/card"
            app:key="weekTime"
            app:persistent="false"
            app:title="@string/week_time"
            app:useSimpleSummaryProvider="true" />
        <com.miyuyan.sysuer.preference.MutiListPreference
            app:defaultValue="@array/week_values"
            app:entries="@array/weeks"
            app:entryValues="@array/week_values"
            app:icon="@drawable/calendar"
            app:key="weekdays"
            app:persistent="false"
            app:positiveButtonText="@string/confirm"
            app:title="@string/week"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        app:isPreferenceVisible="false"
        app:key="dateSelection"
        app:title="@string/date">
        <Preference
            app:defaultValue="true"
            app:icon="@drawable/info"
            app:key="date"
            app:persistent="false"
            app:title="@string/date"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>