<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/account">
        <Preference
            app:icon="@drawable/account"
            app:title="@string/privacy">
            <intent
                android:targetClass="com.miyuyan.sysuer.extra.PrivacyActivity"
                android:targetPackage="com.miyuyan.sysuer" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/app">
        <Preference
            android:persistent="false"
            app:icon="@drawable/setting"
            app:key="setting"
            app:title="@string/setting" />
        <Preference
            app:icon="@drawable/info"
            app:title="@string/about">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.miyuyan.sysuer.extra.AboutActivity"
                android:targetPackage="com.miyuyan.sysuer" />
        </Preference>
        <Preference
            app:icon="@drawable/refresh"
            app:title="@string/update">
            <intent
                android:targetClass="com.miyuyan.sysuer.extra.UpdateActivity"
                android:targetPackage="com.miyuyan.sysuer" />
        </Preference>
        <Preference
            app:icon="@drawable/help"
            app:title="@string/help">
            <intent
                android:data="https://sysu-tang.github.io/sysuer-website/docs/user/introduction"
                android:targetClass="com.miyuyan.sysuer.browser.BrowserActivity"
                android:targetPackage="com.miyuyan.sysuer" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>