<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/dashboard_fragment">
    <fragment
        android:id="@+id/dashboard_fragment"
        android:name="com.miyuyan.sysuer.life.EnergyDashboardFragment"
        android:label="@string/dashboard" />
    <fragment
        android:id="@+id/water_fee_fragment"
        android:name="com.miyuyan.sysuer.life.EnergyWaterFeeFragment"
        android:label="@string/water_fee" />
    <fragment
        android:id="@+id/electricity_fee_fragment"
        android:name="com.miyuyan.sysuer.life.EnergyElectricityFeeFragment"
        android:label="@string/electricity_fee" />
    <fragment
        android:id="@+id/account_fragment"
        android:name="com.miyuyan.sysuer.life.EnergyAccountFragment"
        android:label="@string/account" />
</navigation>
