<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <rikka.preference.SimpleMenuPreference
        app:icon="@drawable/calendar"
        app:key="yearTerm"
        app:persistent="false"
        app:title="@string/year_term"
        app:useSimpleSummaryProvider="true" />

    <com.miyuyan.sysuer.preference.FilterPreference
        app:allowDividerAbove="false"
        app:canEdit="true"
        app:icon="@drawable/home"
        app:key="unit"
        app:persistent="false"
        app:title="@string/department"
        app:useSimpleSummaryProvider="true" />

    <com.miyuyan.sysuer.preference.EditPreference
        app:icon="@drawable/text"
        app:key="courseName"
        app:persistent="false"
        app:title="@string/course_name"
        app:useSimpleSummaryProvider="true" />


    <com.miyuyan.sysuer.preference.EditPreference
        app:icon="@drawable/account"
        app:key="teacher"
        app:persistent="false"
        app:title="@string/teacher"
        app:useSimpleSummaryProvider="true" />

</androidx.preference.PreferenceScreen>