<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/student_job_nav"
    app:startDestination="@id/recruitment_info">

    <fragment
        android:id="@+id/recruitment_info"
        android:name="com.miyuyan.sysuer.studentAffair.RecruitmentInfoFragment"
        android:label="@string/recruitment_info" />

    <fragment
        android:id="@+id/cv"
        android:name="com.miyuyan.sysuer.studentAffair.CVFragment"
        android:label="@string/cv" />

    <fragment
        android:id="@+id/application_record"
        android:name="com.miyuyan.sysuer.studentAffair.ApplicationRecordFragment"
        android:label="@string/application_record" />

</navigation>