<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/Widget.Material3.CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="?attr/colorSurfaceBright"
    app:contentPaddingBottom="8dp"
    app:contentPaddingTop="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <com.google.android.material.textview.MaterialTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:layout_margin="8dp"

    android:text="@string/evaluation"
    android:textAppearance="?attr/textAppearanceTitleLarge"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />
    <com.google.android.material.textview.MaterialTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
        android:drawableStart="@drawable/time"
    android:drawablePadding="4dp"
        android:text="@string/time"
    android:textAppearance="?attr/textAppearanceBody2"/>
    <com.google.android.material.textview.MaterialTextView
    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    android:layout_margin="4dp"
        android:drawableStart="@drawable/account"
    android:drawablePadding="4dp"
    android:text="@string/teacher"
    android:textAppearance="?attr/textAppearanceBody2"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>